--- a/package.json
+++ b/package.json
@@ -1,22 +1,9 @@
 {
     "name": "appointment-bookings",
-    "type": "module",
-    "version": "1.0.0",
-    "description": "Proyecto de aprendizaje",
-    "main": "index.js",
+    "private": true,
+    "version": "0.0.0",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon --exec node --loader ts-node/esm ./srv/app.ts"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "express": "^4.21.2"
-    },
-    "devDependencies": {
-        "@types/express": "^5.0.0",
-        "nodemon": "^3.1.9",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.7.3"
+        "dev:backend": "cd ./backend && npm run start",
+        "dev:frontend": "cd ./frontend && npm run dev"
     }
 }
