--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
     "name": "appointment-bookings",
-    "type": "module",
     "version": "1.0.0",
     "description": "Proyecto de aprendizaje",
-    "main": "index.js",
+    "main": "app.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon --exec node --loader ts-node/esm ./srv/app.ts"
+        "dev": "ts-node-dev srv/app.ts",
+        "lint": "ts-standard",
+        "start": "node build/app.js",
+        "tsc": "tsc",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
+    "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
@@ -17,6 +20,16 @@
         "@types/express": "^5.0.0",
         "nodemon": "^3.1.9",
         "ts-node": "^10.9.2",
+        "ts-node-dev": "^2.0.0",
+        "ts-standard": "^12.0.2",
         "typescript": "^5.7.3"
+    },
+    "eslintConfig": {
+        "parserOptions": {
+            "project": "./tsconfig.json"
+        },
+        "extends": [
+            "./node_modules/ts-standard/eslintrc.json"
+        ]
     }
 }
